--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,18 @@
   publish = "dist"
   command = "npm run build"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [functions]
   directory = "netlify/functions"
+  node_bundler = "esbuild"
+
+[dev]
+  command = "npm run dev"
+  port = 3000
+  publish = "dist"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/salesforce-auth/*"
@@ -38,3 +48,19 @@
     Access-Control-Allow-Headers = "Content-Type, Authorization, Accept"
     Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
     Access-Control-Max-Age = "86400"
+
+# Security headers for static assets
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
