--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "netlify:dev": "netlify dev",
+    "netlify:build": "npm run build",
+    "netlify:deploy": "netlify deploy --prod --dir=dist"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
@@ -28,6 +31,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
+    "netlify-cli": "^17.0.0",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.5.3",
