--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "voltride-dashboard",
   "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "netlify dev",
     "build": "tsc -b && vite build",
