--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "dev": "netlify dev",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "vite:dev": "vite --port 3000",
     "netlify:dev": "netlify dev",
     "netlify:build": "npm run build",
-    "netlify:deploy": "netlify deploy --prod --dir=dist"
+    "netlify:deploy": "netlify deploy --prod --dir=dist",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "leaflet": "^1.9.4",
