--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
+    "netlify-cli": "^22.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
