--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "netlify-cli": "^22.1.3",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
+    "terminal-link": "^3.0.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "update-notifier": "^7.0.0",
