--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "autoprefixer": "^10.4.14",
     "ci-info": "^4.0.0",
     "decache": "^4.6.2",
+    "envinfo": "^7.8.1",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
