--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "fastest-levenshtein": "^1.0.16",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
     "react": "^18.3.1",
