--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
     "inquirer": "^9.2.12",
+    "is-wsl": "^3.1.0",
     "netlify-cli": "^22.1.3",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2",
