--- a/netlify.toml
+++ b/netlify.toml
@@ -13,6 +13,7 @@
   command = "npm run vite:dev"
   port = 3000
   publish = "dist"
+  targetPort = 3000
   functions = "netlify/functions"
 
 [[redirects]]
