--- a/netlify.toml
+++ b/netlify.toml
@@ -5,11 +5,15 @@
 [build.environment]
   NODE_VERSION = "18"
 
+[functions]
+  directory = "netlify/functions"
+  node_bundler = "esbuild"
+
 [dev]
   command = "npm run vite:dev"
   port = 8888
   publish = "dist"
-  targetPort = 3000
+  targetPort = 3001
   functions = "netlify/functions"
 
 [[redirects]]
